[package]
name = "cardfall"
version = "0.1.0"
authors = ["Cameron Barnes <cameron_barnes@outlook.com>"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Personally not a big fan of this warning/error, we're going to exclude it from pedantic
module_name_repetitions = "warn"

[features]
shared_str = ["dep:string-interner", "dep:parking_lot"]
api = ["bulk", "dep:reqwest", "dep:httpstatus"]
bulk = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
itertools = "0.13"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
derive_more = { version = "1.0", features = ["display", "is_variant"] }
cfg-if = "1"
httpstatus = { version = "0.1", optional = true }
tinyvec = { version = "1.8", features = ["serde"] }

string-interner = { version = "0.17", optional = true }
parking_lot = { version = "0.12", optional = true }
